# amaru-wear

./: .gitattributes  .gitignore  Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/amaruwearos/: AmaruBridge.kt  AmaruViewModel.kt  MainActivity.kt
app/src/main/java/com/example/amaruwearos/composables/: BootstrappingView.kt  SyncStatusIndicator.kt  TipInfoDisplay.kt
app/src/main/res/drawable/: amaru_logo.xml
app/src/main/res/mipmap/: ic_launcher.xml
app/src/main/res/values/: strings.xml
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/patches/amaru-stores/: Cargo.toml
rust/patches/amaru-stores/src/rocksdb/: mod.rs
rust/src/: amaru.rs  jni_impl.rs  lib.rs  models.rs  state.rs
scripts/: build-and-deploy.sh  build-and-launch.sh  build-rust.sh  setup.sh
